src/partials/_core.scss
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: $font-stack;
    overflow-x: hidden;
}

[class$="container"] {
    $padding-lr: clamp(24px,5vw,72px);
    padding: 60px $padding-lr;
    margin: 0 auto;
    max-width: calc(1110px + 2 * $padding-lr);
}

